--- a/special-episode-1/step7/app/index.html
+++ b/special-episode-1/step7/app/index.html
@@ -18,33 +18,32 @@
 
     <div class="container">
       <!-- Tasks List -->
-       <div class="card">
-         <div class="row">
-           <div class="col-sm-12">
-             <h2 class="orange">Tasks</h2>
-           </div><!--./col-sm-12-->
-         </div><!--./row-->
-         <div class="row">
-           <div class="col-sm-12">
-             <table class="table">
-               <thead>
-                 <tr>
-                   <th>ID</th>
-                   <th>Date</th>
-                   <th>Content</th>
-                   <th>Author</th>
-                   <th>Done</th>
-                 </tr>
-               </thead>
-               <tbody id="tasks">
-                 <!-- tasks here -->
-               </tbody>
-             </table>
-           </div><!--./col-sm-12-->
-         </div><!--./row-->
-       </div><!--./card-->
-
-    </div><!--./container-->
+      <div class="card">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="orange">Tasks</h2>
+          </div><!--./col-sm-12-->
+        </div><!--./row-->
+        <div class="row">
+          <div class="col-sm-12">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Date</th>
+                  <th>Content</th>
+                  <th>Author</th>
+                  <th>Done</th>
+                </tr>
+              </thead>
+              <tbody id="tasks">
+                <!-- tasks here -->
+              </tbody>
+            </table>
+          </div><!--./col-sm-12-->
+        </div><!--./row-->
+      </div><!--./card-->
+    </div>
 
     <footer>
       <p class="text-center">Copyright 2018 <a href="https://www.eattheblocks.com" title="Eat The Blocks, #1 Screencast for Ethereum & Blockchain Developers">Eat The Blocks</a>, #1 Screencast for Ethereum and Blockchain developers.</p>
